	PR c/28419 	* c-decl.c (c_make_fname_decl): Do not segfault in case where 	current_function_decl is set but current_function_scope is not.

* gcc.dg/pr28319.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117684 138bc75d-0d04-0410-961f-82ee72b054a4