gcc/testsuite/gcc.dg/pr28419.c
@@ -1,0 +1,3 @@
+/* { dg-do compile } */
+void foo() 
+const char* p = __FUNCTION__; /* { dg-error "" } */
